Tripomatic image updated

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -33,7 +33,7 @@
       "Travel",
       "Trip planner",
       "Animations", 
-      "Bootstrap", 
+      "Responsive", 
       "Local Storage",
       "IndexedDB",
       "No jQuery"
